PullRequest: 236 fix: change collapse's maxHeight
Merge branch 'fix/dev-4.2.2-github-758-bp of git@code.alipay.com:oceanbase/oceanbase-developer-center.git into dev-4.2.2

https://code.alipay.com/oceanbase/oceanbase-developer-center/pull_requests/236




* fix: change collapse's maxHeight

--- a/src/page/Project/Sensitive/components/SensitiveColumn/components/index.less
+++ b/src/page/Project/Sensitive/components/SensitiveColumn/components/index.less
@@ -31,7 +31,6 @@
 .collapses {
   :global {
     .ant-collapse-content-box {
-      max-height: 480px;
       overflow: auto;
     }
   }
